--- a/sections/activities.tex
+++ b/sections/activities.tex
@@ -1,8 +1,8 @@
-Artificial Intelligence and Machine Learning Club \hfill Fall 2022
+Artificial Intelligence and Machine Learning Club \hfill Oct 2022 --- Present
 
-HackViolet 2022 \hfill Spring 2022
+HackViolet 2022 \hfill February 2022
 
-VTHacks IX \hfill Spring 2022
+VTHacks IX \hfill February 2022
 
 
 % Graduate Student Council Representative	\hfill YYYY --- YYYY
