--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,7 +1,7 @@
 
 % \skills{Master of Arts in Mathematics}, \textit{Texas Institute of Technology \& Science}	\hfill MMM 2021
 
-\skills{Bachelor of Science in Data-Centric Computing (Computer Science)}, \textit{Virginia Tech} \hfill	Expected Graduation: May 2025
+\skills{Bachelor of Science in Data-Centric Computing (Computer Science)}, \textit{Virginia Tech} \hfill Expected Grad: May 2025
 
 \textit{GPA: 4.0}
 
