--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,7 +1,7 @@
 %====================
 % EXPERIENCE A
 %====================
-\subsection{{Collaborator / Data Visualization Project \hfill Spring 2022}}
+\subsection{{Collaborator / Data Visualization Project \hfill May 2022}}
 \subtext{Virginia Tech \hfill Blacksburg, VA}
 \begin{zitemize}
 \item Collaborated with two other students on a COVID data visualization project to evaluate trends in COVID cases
